# lead_billing_engine_API

./: .gitignore  ASSIGNMENT-EXAMPLE.md  ASSIGNMENT.md  Dockerfile  LOCALSTACK_SIGNUP.md  Makefile.mk  README.md  SCORECARD.md  docker-compose.yml
backend/: .pylintrc  Dockerfile  alembic.ini  gunicorn.conf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_03_18_1355-76d6c918b23a_add_types_and_constraints_to_model_.py  2025_03_18_1747-db7f09e5196a_update_foreign_key_relationships_in_.py  2025_03_19_0027-abb97a063c02_seed_database.py
backend/app/: billing_lead_types.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/core/: __init__.py  database.py
backend/app/crud/: __init__.py  billing_report_service.py  leads_service.py
backend/app/fixtures/: __init__.py  sample_leads.json
backend/app/models/: __init__.py  action.py  base.py  billing_report.py  billing_report_file.py  customer.py  lead.py  models.py  product.py
backend/app/schemas/: __init__.py  base.py
backend/app/scripts/: config.json  deploy_aws.py  local_env_setup.py  seed_db.py
backend/app/shared/: __init__.py  billing_lead_types.py  billing_pricing.py  lead_action_pricing.py  lead_action_types.py  utils.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 2025_03_18_1210-8f665d50961b_initial_migration.py  2025_03_18_2314-bfd038240278_update_fk_relationships_field_.py  2025_03_19_0027-abb97a063c02_seed_database.py  2025_03_21_2104-cfbd30e0b841_initial_migration.py  2025_03_21_2108-04b3c87baa1e_seed_database.py  2025_03_22_2057-d54b057afa84_optimize_field_type_checking_async_.py
backend/tests/: __init__.py  conftest.py  test_crud.py  test_models.py  test_schemas.py  test_terraform.py
backend/tests/integration/: test_infra_and_api.py
backend/tests/unit/: test_core.py  test_endpoints.py  test_fixtures.py
(+31 files in other folders)
