[tool.poetry]
name = "billing-engine"
version = "0.1.0"
description = "A billing engine solution."
authors = ["Izzy Matos <israeldmatos@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
gunicorn = "^22.0.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
boto3 = "^1.34.149"
pydantic-settings = "^2.3.4"
mako = "^1.3.5"
pydantic = "^2.10.6"

[tool.poetry.scripts]
local = "scripts.run:local"
test = "pytest:main"
lint = "scripts.lint:run_pylint"
"alembic:local" = "scripts.alembic:local"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
faker = "^26.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
