[tool.poetry]
name = "billing-engine"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = {extras = ["standard"], version = "^0.115.11"}
uvicorn = "^0.30.3"
gunicorn = "^22.0.0"
alembic = "^1.13.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
asyncpg = "^0.29.0"
boto3 = "^1.34.149"
pydantic-settings = "^2.3.4"
mako = "^1.3.5"
pydantic = "^2.10.6"
asyncio = "^3.4.3"
localstack = "^4.2.0"
awscli-local = "^0.22.0"
fastapi-utils = "^0.8.0"
typing-inspect = "^0.9.0"

[tool.poetry.scripts]
local = "scripts.run:local"
test = "pytest:main"
lint = "scripts.lint:run_pylint"
"alembic:local" = "scripts.alembic:local"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
faker = "^26.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
